basic extensions structuring (pending local tests)
